Redone the networking code. Widget shows now parch server status.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">MabiStatus</string>
+	<string name="widget_name">MabiWidget</string>
     <string name="hello_world">Hello world!</string>
 	<string name="status_offline">Offline</string>
 	<string name="status_maint">Maint</string>
