--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
     <string name="app_name">MabiStatus</string>
 	<string name="widget_name">MabiWidget</string>
     <string name="hello_world">Hello world!</string>
+	
+	<string name="refresh">Update info</string>
+	<string name="refresh_widget">Update widget</string>
+	<string name="settings">Settings...</string>
+	
 	<string name="status_offline">Offline</string>
 	<string name="status_maint">Maint</string>
 	<string name="status_online">Online</string>
