--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
 	<string name="refresh">Update info</string>
 	<string name="refresh_widget">Update widget</string>
 	<string name="settings">Settings...</string>
+	<string name="menu_debug">Test</string>
 	
 	<string name="status_offline">Offline</string>
 	<string name="status_maint">Maint</string>
