Adding "today" and "tomorrow" headers.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
 <resources>
     <string name="app_name">MabiStatus</string>
 	<string name="widget_name">MabiWidget</string>
-    <string name="hello_world">Hello world!</string>
+	<string name="hello_world">Hello World!</string>
+    <string name="daily_today_header">Today</string>
+	<string name="daily_tomorrow_header">Tomorrow</string>
 	
 	<string name="refresh">Update info</string>
 	<string name="refresh_widget">Update widget</string>
