--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
 	<string name="status_offline">Offline</string>
 	<string name="status_maint">Maint</string>
 	<string name="status_online">Online</string>
+	<string name="message_loading">Loading...</string>
 </resources>
