Adding notifications for server going maint <-> online

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
 	<string name="status_maint">Maint</string>
 	<string name="status_online">Online</string>
 	<string name="message_loading">Loading...</string>
+	<string name="message_maintenance">Maintenance has started</string>
+	<string name="message_online">Server is online now</string>
 </resources>
