--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">MabiStatus</string>
+	<string name="app_config_name">Settings</string>
 	<string name="widget_name">MabiWidget</string>
 	<string name="hello_world">Hello World!</string>
     <string name="daily_today_header">Today</string>
