--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,10 @@
 	
 	<string name="pref_notify">Notifications</string>
 	<string name="pref_notify_summ">Inform about server switching between Maint and Online</string>
+	<string name="pref_sleepUpdates">Sleep updates</string>
+	<string name="pref_sleepUpdates_summ">Check server status even in sleep mode</string>
+	<string name="pref_wifi">WiFi only</string>
+	<string name="pref_wifi_summ">Don\'t update when using mobile connection</string>
 	
 	<string name="status_offline">Offline</string>
 	<string name="status_maint">Maint</string>
